// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree expression translation > With options {"style":"ASCII 1"} > should translate a simple tree 1`] = `
"Linux
 +-Android
 +-Debian
 |   +-Ubuntu
 |   |   +-Lubuntu
 |   |   +-Kubuntu
 |   |   +-Xubuntu
 |   |   \`-Xubuntu
 |   \`-Mint
 +-Centos
 \`-Fedora
"
`;

exports[`Tree expression translation > With options {"style":"ASCII 2"} > should translate a simple tree 1`] = `
"Linux
 +--Android
 +--Debian
 |   +--Ubuntu
 |   |   +--Lubuntu
 |   |   +--Kubuntu
 |   |   +--Xubuntu
 |   |   \`--Xubuntu
 |   \`--Mint
 +--Centos
 \`--Fedora
"
`;

exports[`Tree expression translation > With options {"style":"ASCII 3"} > should translate a simple tree 1`] = `
"Linux
 |--Android
 |--Debian
 |   |--Ubuntu
 |   |   |--Lubuntu
 |   |   |--Kubuntu
 |   |   |--Xubuntu
 |   |   \`--Xubuntu
 |   \`--Mint
 |--Centos
 \`--Fedora
"
`;

exports[`Tree expression translation > With options {"style":"unicode 1"} > should translate a simple tree 1`] = `
"Linux
 ├─Android
 ├─Debian
 │  ├─Ubuntu
 │  │  ├─Lubuntu
 │  │  ├─Kubuntu
 │  │  ├─Xubuntu
 │  │  └─Xubuntu
 │  └─Mint
 ├─Centos
 └─Fedora
"
`;

exports[`Tree expression translation > With options {"style":"unicode 2"} > should translate a simple tree 1`] = `
"Linux
 ├──Android
 ├──Debian
 │   ├──Ubuntu
 │   │   ├──Lubuntu
 │   │   ├──Kubuntu
 │   │   ├──Xubuntu
 │   │   └──Xubuntu
 │   └──Mint
 ├──Centos
 └──Fedora
"
`;

exports[`Tree expression translation > With options {"style":"unicode right bottom"} > should translate a simple tree 1`] = `
"         ┌─Android
         │                 ┌─Lubuntu
         │                 ├─Kubuntu
         │                 ├─Xubuntu
         │        ┌─Ubuntu─┴─Xubuntu
         ├─Debian─┴─Mint
         ├─Centos
───Linux─┴─Fedora
"
`;

exports[`Tree expression translation > With options {"style":"unicode right center"} > should translate a simple tree 1`] = `
"         ┌─Android
         │                 ┌─Lubuntu
         │                 ├─Kubuntu
         ├─Debian─┬─Ubuntu─┼─Xubuntu
───Linux─┤        │        └─Xubuntu
         │        └─Mint
         ├─Centos
         └─Fedora
"
`;

exports[`Tree expression translation > With options {"style":"unicode right top"} > should translate a simple tree 1`] = `
"───Linux─┬─Android
         ├─Debian─┬─Ubuntu─┬─Lubuntu
         │        │        ├─Kubuntu
         │        │        ├─Xubuntu
         │        │        └─Xubuntu
         │        └─Mint
         ├─Centos
         └─Fedora
"
`;
